--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.composedemo"
@@ -118,4 +118,12 @@ dependencies {
     implementation "io.ktor:ktor-client-serialization-jvm:$ktor_version"
     implementation "io.ktor:ktor-client-android:$ktor_version"
     implementation "io.ktor:ktor-client-logging:$ktor_version"
+
+    //Camera
+    implementation("androidx.camera:camera-camera2:1.2.0-rc01")
+    implementation("androidx.camera:camera-view:1.2.0-rc01")
+    implementation("androidx.camera:camera-lifecycle:1.1.0")
+
+    //Permissions
+    implementation("com.google.accompanist:accompanist-permissions:0.18.0")
 }
